# chainlit

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  chainlit.md  makefile  pyproject.toml  requirements.txt
.chainlit/: config.toml
data/documents/: dummy.md  knowledgebase.md
public/: script.js
scripts/: launch.sh
src/: chainlit.py  embeddings.py  frontend.py  llm.py  tf_logging.py
src/integrations/: literal.py
src/managers/chat_hisory/: __init__.py  base.py  in_memory.py
src/managers/configs/: __init__.py  llm.py  secrets.py
src/managers/prompt/: PromptManager.py
src/managers/storage/: __init__.py
src/vector_storage/: chroma.py  utils.py
tests/managers/configs/: test_config_parser.py
