[tool.poetry]
name = "fam-llm"
version = "0.1.0"
description = ""
authors = ["Yash Kumar Verma <yash.verma@fampay.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^0.5.0"
openai = "^1.30.5"
chroma = "^0.2.0"
chainlit = "^1.1.202"
pydantic = "^2.7.2"
pytest = "^8.2.1"
uuid = "^1.30"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
aiohttp = "^3.9.5"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
